modificato url ad admin in dettaglio aziende

--- a/pcto/templates/dettaglio_azienda.html
+++ b/pcto/templates/dettaglio_azienda.html
@@ -78,7 +78,7 @@
     </div>
     
  <div class="w3-container">  
-    <a href="/admin/pcto/aziende/{{azienda.id}}">Admin</a>
+    <a href="/pcto/admin/pcto/aziende/{{azienda.id}}">Admin</a>
     <h3>Contatti</h3>
     <hr>      
         {% for con in contatti %}
