modificato template inserimento

--- a/festival/templates/festival/inserimento.html
+++ b/festival/templates/festival/inserimento.html
@@ -13,7 +13,7 @@
 
 {% block content %}
     <div class="w3-container w3-card-4" id="container">
-       <h1>Compilazione Nuovo Questionario</h1>
+       <h1>Compilazione Questionari</h1>
        {{opzioni}}
        <form method="POST">
         {% csrf_token %}
