--- a/festival/templates/festival/index.html
+++ b/festival/templates/festival/index.html
@@ -14,7 +14,7 @@
    Applicazione per la raccolta dati, eseguita dagli studenti dell'Istituto Mapelli,
    durante lo svolgimento del Festival del Parco di Monza 2023. 
    <p>
-   Per informazioni sul festival: <a href="http://www.fetivaldelparcodimonza.it"> Festival del Parco di Monza 2023</a>
+   Per informazioni sul festival: <a href="http://www.festivaldelparcodimonza.it"> Festival del Parco di Monza 2023</a>
    </p>
 </div>
 {% endblock %}
