--- a/festival/templates/festival/base.html
+++ b/festival/templates/festival/base.html
@@ -46,8 +46,8 @@
                 <a href="{% url 'festival:index' %}" class="w3-bar-item w3-button ">Home</a>
                 <a href="{% url 'festival:elenco' %}" class="w3-bar-item w3-button ">Elenco Questionari</a>
                 <a href="{% url 'festival:inserimento' %}" class="w3-bar-item w3-button ">Inserimento</a>   
-                <a href="/admin" class="w3-bar-item w3-button "> Login</a>
-                <a href="/admin/logout" class="w3-bar-item w3-button "> Logout</a>
+                <a href="/pcto/admin" class="w3-bar-item w3-button "> Login</a>
+                <a href="/pcto/admin/logout" class="w3-bar-item w3-button "> Logout</a>
             </div>
             
         
