--- a/pcto/templates/login.html
+++ b/pcto/templates/login.html
@@ -1,7 +1,8 @@
 <html>
    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
-            #box {background: lightblue; padding: 15px; width: 25%; margin: auto;}
+            #box {background: lightblue; padding: 15px; width: 85%; margin: auto;}
             h2 {color : blue; text-align: center;}
             h3 {color: #c00;}
             #invio {text-align: center;}
