--- a/festival/templates/festival/base.html
+++ b/festival/templates/festival/base.html
@@ -2,6 +2,7 @@
 <html>
     <head> 
         <meta charset='utf8'>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>OFFICINA PCTO</title>
 
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +19,20 @@
             #logo2 {height:120px; margin-right: 0px}
             h1 {color: #c00;}
             h2 {color: rgb(9, 9, 105);}
+	    #mysidebar {display: none;}
         </style>
+
+	<script>
+		function myFunction(id) {
+	             var x = document.getElementById(id);
+                     if (x.className.indexOf("w3-show") == -1) {
+                         x.className += " w3-show";
+                     } else {
+                         x.className = x.className.replace(" w3-show", "");
+                     }
+		}
+	</script>
+
         {% block head %}
           
         {% endblock %}
@@ -49,8 +63,17 @@
                 <a href="/pcto/admin" class="w3-bar-item w3-button "> Login</a>
                 <a href="/pcto/admin/logout" class="w3-bar-item w3-button "> Logout</a>
             </div>
+
+            <button class="w3-button  w3-hide-large w3-hide-medium w3-xlarge" onclick="myFunction('mySidebar')">☰</button>
             
-        
+	    <div class="w3-sidebar w3-bar-block w3-border-right w3-light-green"  id="mySidebar">
+ 	        <button onclick="myFunction('mySidebar')" class="w3-bar-item w3-large">Chiudi &times;</button>
+                <a href="{% url 'festival:index' %}" class="w3-bar-item w3-button ">Home</a>
+                <a href="{% url 'festival:elenco' %}" class="w3-bar-item w3-button ">Elenco Questionari</a>
+                <a href="{% url 'festival:inserimento' %}" class="w3-bar-item w3-button ">Inserimento</a>   
+                <a href="/pcto/admin" class="w3-bar-item w3-button "> Login</a>
+                <a href="/pcto/admin/logout" class="w3-bar-item w3-button "> Logout</a>
+            </div>
         <hr/>
         {% endblock %}
         
