--- a/festival/templates/festival/login.html
+++ b/festival/templates/festival/login.html
@@ -1,5 +1,6 @@
 <html>
    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <style>
             #box {background: lightblue; padding: 15px; width: 25%; margin: auto;}
             h2 {color : blue; text-align: center;}
