modificate dimensioni templates festival x mobile

--- a/festival/templates/festival/elenco.html
+++ b/festival/templates/festival/elenco.html
@@ -4,8 +4,8 @@
 {%block head %}
 <style>
     h2 {text-align:center; margin: auto;}
-    #container {width:80%; margin:auto; text-align:center}
-    #tabella {width: 75%; margin: auto; text-align: left;}
+    #container {width:95%; margin:auto;  text-align:center; padding-bottom: 16px; margin-bottom: 16px;}
+    #tabella {width: 100%; margin: auto; text-align: left;}
     .matita {cursor:pointer;}
 </style>
 <script>
