--- a/festival/templates/festival/base.html
+++ b/festival/templates/festival/base.html
@@ -15,8 +15,8 @@
             #titolo {margin: auto; text-align: center}
             #menu {margin-top:10px;}
             #logo {margin-top: 15px; margin-right: 15px;}
-            #logo1 {height:170px;}
-            #logo2 {height:120px; margin-right: 0px}
+            #logo1 {height:130px;}
+            #logo2 {height:90px; margin-right: 0px}
             h1 {color: #c00;}
             h2 {color: rgb(9, 9, 105);}
 	    #mysidebar {display: none;}
@@ -43,11 +43,11 @@
         <div id="testata">
             <div id="mapelli">
                <img id="logo1" src={% static "pcto/mape.png"  %}> <br>
-               <span id=sessione style="margin-left: 40px">Sessione {{user}}</span>
+               <span id=sessione style="margin-left: 40px"> {{user}} </span>
             </div>
             <div id="titolo">
                <h1>Officina Software</h1> <br>
-               Raccolta Dati<br>
+               Rilevazione Dati<br>
                <h2>FESTIVAL PARCO DI MONZA 2023</h2>
             </div>
             <div id="logo">
