--- a/festival/templates/festival/base.html
+++ b/festival/templates/festival/base.html
@@ -60,8 +60,13 @@
                 <a href="{% url 'festival:index' %}" class="w3-bar-item w3-button ">Home</a>
                 <a href="{% url 'festival:elenco' %}" class="w3-bar-item w3-button ">Elenco Questionari</a>
                 <a href="{% url 'festival:inserimento' %}" class="w3-bar-item w3-button ">Inserimento</a>   
-                <a href="/pcto/admin" class="w3-bar-item w3-button "> Login</a>
-                <a href="/pcto/admin/logout" class="w3-bar-item w3-button "> Logout</a>
+		<div class="w3-dropdown-hover">
+		    <button class="w3-button">Autenticazione</button>	
+		    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                        <a href="/pcto/admin" class="w3-bar-item w3-button "> Login</a>
+                        <a href="/pcto/admin/logout" class="w3-bar-item w3-button "> Logout</a>
+		    </div>
+		</div>
             </div>
 
             <button class="w3-button  w3-hide-large w3-hide-medium w3-xlarge" onclick="myFunction('mySidebar')">☰</button>
