unificato il report rispetto alle domande

--- a/festival/templates/festival/base.html
+++ b/festival/templates/festival/base.html
@@ -62,10 +62,7 @@
                     <button class="w3-button">Questionari</button>
                     <div class="w3-dropdown-content w3-bar-block w3-card-4">
                         <a href="{% url 'festival:elenco' %}" class="w3-bar-item w3-button ">Elenco</a>
-                        <a href="{% url 'festival:report' 0 %}" class="w3-bar-item w3-button ">Report_1</a>
-                        <a href="{% url 'festival:report' 1 %}" class="w3-bar-item w3-button ">Report_2</a>
-                        <a href="{% url 'festival:report' 2 %}" class="w3-bar-item w3-button ">Report_3</a>
-                        <a href="{% url 'festival:report' 3 %}" class="w3-bar-item w3-button ">Report_4</a>
+                        <a href="{% url 'festival:report'%}" class="w3-bar-item w3-button ">Report</a>
                     </div>
                 </div>
                 <a href="{% url 'festival:inserimento' %}" class="w3-bar-item w3-button ">Inserimento</a>   
