--- a/pcto/templates/base.html
+++ b/pcto/templates/base.html
@@ -23,6 +23,7 @@
                     <ul>
                        <li><a href="{% url 'pcto:index' %}">Home</a></li>
                        <li><a href="{% url 'pcto:statistica' %}">Statistiche</a></li>
+                       <li><a href="{% url 'pcto:upload' %}">Aggiornamento Archivi</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'pcto:aziende' %}" class="aziende">AZIENDE</a></li>
