upload_csv_aziende path relativo in upload_csv_az

--- a/pcto/templates/upload.html
+++ b/pcto/templates/upload.html
@@ -14,7 +14,7 @@
         if (!risp)
            return;
         if (nome_archivio == 'aziende_csv') {
-           url = "/pcto/upload_csv_aziende";  
+           url = "upload_csv_aziende";  
         }
         myform = document.getElementById('myform')
         myform.action = url
