--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -45,7 +45,7 @@
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="{%url 'tutor:mioLogin' %}?next=/tutor" class="w3-bar-item w3-button ">Login</a>
+                    <a href="/pcto/tutor/login.html?next=/pcto/tutor" class="w3-bar-item w3-button ">Login</a>
                     <a href="{%url 'tutor:logout_view'%}" class="w3-bar-item w3-button ">Logout</a> 
                 </div>
             </div>
