--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -38,7 +38,7 @@
                 <button class="w3-button">Proposte</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="" class="w3-bar-item w3-button ">Elenco Proposte</a>
-                    <a href="" class="w3-bar-item w3-button ">Archivi</a>
+                    <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a>
                     
                 </div>
             </div>    
