--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -5,11 +5,10 @@
         <title>PIATTAFORMA ORIENTAMENTO</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <style>
-            #logo {width:250px;margin-right: 200px; float:left;}
-            #logo img {width: 35%; margin-left:30px;}
+            #logo {width:350px;margin-right: 0px; float:left;}
+            #logo img {width: 115px;; margin-left:30px;}
             #menu {margin-top: 10px;}
-            #sessione {margin-left: 0px;}
-           
+            #sessione {margin-left: 40px;margin-top: 100px;}
             #intestazione h2 {color:brown;}
         </style>
         {% block head %}
@@ -22,22 +21,21 @@
         {% block testata %}
         <div class="w3-panel" id="intestazione">
             <div id="logo">
-                <h3>ITCG A. Mapelli</h3>
+                <h3>ITCG A. Mapelli - A.S. 2023-24</h3>
                 <img id="logo" src={% static "pcto/logo.jpeg" %}>
                 <div id=sessione>Sessione: {{user}}</div> 
             </div>
-            <h2 class="titolo">OFFICINA SOFTWARE - ORIENTAMENTO</h2>
-            <h4>A.S. 2023-24</h4>
+            <h2>OFFICINA SOFTWARE - ORIENTAMENTO</h2>
+           
         </div>
 
-         
           <div class="w3-bar w3-show-large w3-hide-small w3-light-blue" id="menu">
             
             <a href="{% url 'tutor:index' %}" class="w3-bar-item w3-button ">Home</a>
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Proposte</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="" class="w3-bar-item w3-button ">Elenco Proposte</a>
+                    <a href="{%url 'tutor:proposte'%}" class="w3-bar-item w3-button ">Elenco Proposte</a>
                     <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a>
                     
                 </div>
