--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -39,7 +39,8 @@
                     <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a>
                     
                 </div>
-            </div>    
+            </div>   
+            <a href="{% url 'tutor:elenco_tutor' %}" class="w3-bar-item w3-button ">Tutor</a>
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
