--- a/tutor/templates/tutor/index.html
+++ b/tutor/templates/tutor/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
-<h1>Piattaforma per la gestione attività di orientamento </h1>
-
+<div class="w3-container">
+      <h2>News </h2>
+</div>
 {%endblock%}
