--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -32,6 +32,7 @@
           <div class="w3-bar w3-show-large w3-hide-small w3-light-blue" id="menu">
             
             <a href="{% url 'tutor:index' %}" class="w3-bar-item w3-button ">Home</a>
+            
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Proposte</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -40,7 +41,11 @@
                     
                 </div>
             </div>   
+
             <a href="{% url 'tutor:elenco_tutor' %}" class="w3-bar-item w3-button ">Tutor</a>
+            <a href="{% url 'tutor:elenco_classi' %}" class="w3-bar-item w3-button ">Classi</a>
+
+            
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
@@ -48,6 +53,7 @@
                     <a href="{%url 'tutor:logout_view'%}" class="w3-bar-item w3-button ">Logout</a> 
                 </div>
             </div>
+
           </div>
 
         {% endblock %}
