--- a/tutor/templates/tutor/upload.html
+++ b/tutor/templates/tutor/upload.html
@@ -17,7 +17,10 @@
            url = "upload_csv_proposte";  
         }
         if (nome_archivio == 'tutor_csv') {
-           url = "upload_csv_tutor";  
+           url = "upload_csv/Tutor";  
+        }
+        if (nome_archivio == 'classi_csv') {
+           url = "upload_csv/Classi";  
         }
         myform = document.getElementById('myform')
         myform.action = url
@@ -41,6 +44,7 @@
         <ul class="w3-ul">
             <li><a href="javascript:carica('proposte_csv')"> CSV Proposte </a></li>
             <li><a href="javascript:carica('tutor_csv')"> CSV Tutor </a></li>
+            <li><a href="javascript:carica('classi_csv')"> CSV Classi </a></li>
         </ul>
     </form>
 </div>
