--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -5,11 +5,11 @@
         <title>PIATTAFORMA ORIENTAMENTO</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <style>
-            #logo {width:350px;margin-right: 0px; float:left;}
+            #logo {width:350px; float:left;}
             #logo img {width: 115px;; margin-left:30px;}
             #menu {margin-top: 10px;}
             #sessione {margin-left: 40px;margin-top: 100px;}
-            #intestazione h2 {color:brown;}
+            #intestazione h2 {color:brown; margin-left: 20px;}
         </style>
         {% block head %}
           
