--- a/tutor/templates/tutor/classi.html
+++ b/tutor/templates/tutor/classi.html
@@ -12,18 +12,20 @@
 {%block content %}
 
 <h2>Classi</h2>
+ 
     <div class="w3-container" style="width: 50%; margin:auto;">
-        <table class="w3-table-all w3-card-4">
-            <th>Classe</th>
-            <th>Num. Studenti</th>
-            <th>Guarda</th>
-            {%for c in classi%}
-            <tr>
-                <td>  {{c.classe}}</td>
-                <td>  {{c.num_studenti}}</td>
-                <td><img src="{%static 'tutor/gnome-help.png' %}"> </td>
-            </tr>
-            {%endfor%}
-        </table>
+        {%for indirizzo in dati %}
+            <h3>{{indirizzo.0}}</h3>
+            <table class="w3-table-all w3-card-4">
+                <th>Classe</th><th>Num. Studenti</th><th>Guarda</th>
+                {%for classe in indirizzo.1 %}
+                <tr>
+                    <td>  {{classe.classe}}</td>
+                    <td>  {{classe.num_studenti}}</td>
+                    <td><img src="{%static 'tutor/gnome-help.png' %}"> </td>
+                </tr>
+                {%endfor%}
+            </table>
+        {%endfor%}
     </div>
 {%endblock%}
