--- a/tutor/templates/tutor/upload.html
+++ b/tutor/templates/tutor/upload.html
@@ -22,6 +22,9 @@
         if (nome_archivio == 'classi_csv') {
            url = "upload_csv/Classi";  
         }
+        if (nome_archivio == 'studenti_csv') {
+           url = "upload_csv_studenti";  
+        }
         myform = document.getElementById('myform')
         myform.action = url
         myform.submit();
@@ -45,6 +48,7 @@
             <li><a href="javascript:carica('proposte_csv')"> CSV Proposte </a></li>
             <li><a href="javascript:carica('tutor_csv')"> CSV Tutor </a></li>
             <li><a href="javascript:carica('classi_csv')"> CSV Classi </a></li>
+            <li><a href="javascript:carica('studenti_csv')"> CSV Studenti </a></li>
         </ul>
     </form>
 </div>
