--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -40,6 +40,7 @@
                 <button class="w3-button">Proposte</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="{%url 'tutor:proposte'%}" class="w3-bar-item w3-button ">Elenco Proposte</a>
+                    <a href="{% url 'tutor:adesioni' %}" class="w3-bar-item w3-button ">Adesioni</a>
                     <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a>
                     
                 </div>
@@ -47,8 +48,7 @@
 
             <a href="{% url 'tutor:elenco_tutor' %}" class="w3-bar-item w3-button ">Tutor</a>
             <a href="{% url 'tutor:elenco_classi' %}" class="w3-bar-item w3-button ">Classi</a>
-
-            
+                       
             <div class="w3-dropdown-hover">
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
