url in dettaglio_proposta.html

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -21,7 +21,7 @@
            <td> <span class=label>Nome progetto:</span> </td> <td>{{proposta.nome_progetto}}</td>
         </tr>
         <tr>
-           <td> <span class=label>Ente promotore: </span> </td>  <td> {{proposta.ente}} - url di riferimento:  </td>
+           <td> <span class=label>Ente promotore: </span> </td>  <td> {{proposta.ente}} - url di riferimento:  {{proposta.url}} </td>
         </tr>
     </table>  
 </div>
