elenco studenti in adesioni proposta

--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -42,6 +42,13 @@
     <span class=evidenziato>Referenti Interni:</span>
     <button class="w3-button w3-blue" onClick="aggiungimi()"> Aggiungimi </button></button>
     <hr>
+    <h2>Adesioni</h2>
+    <button class="w3.button w3-blue">Nuova adesione</button>
+    <div class="w3.container">
+        <table class="w3-table-all w3-card-4" style="width: 50%; margin:auto">
+            <th>Studente</th><th>Classe</th><th>Tutor</th><th>Canc.</th>
+        </table>
+    </div>
 </div>
 
 {%endblock%}
