--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -15,6 +15,9 @@
     function aggiungimi() {
         alert('funzionalità non ancora implementata')
     }
+    function adesione() {
+        alert('funzionalità non ancora implementata')
+    }
 </script>
 
 {%endblock%}
@@ -43,7 +46,7 @@
     <button class="w3-button w3-blue" onClick="aggiungimi()"> Aggiungimi </button></button>
     <hr>
     <h2>Adesioni</h2>
-    <button class="w3.button w3-blue">Nuova adesione</button>
+    <button class="w3.button w3-blue" onClick="adesione()">Nuova adesione</button>
     <div class="w3.container">
         <table class="w3-table-all w3-card-4" style="width: 50%; margin:auto">
             <th>Studente</th><th>Classe</th><th>Tutor</th><th>Canc.</th>
