--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -4,6 +4,7 @@
             {{tut.0}} {{tut.1}} <br>
         {%endfor%}
         <h2>Assegnamenti</h2>
+        {{assegnamenti}}
         {%for tut in assegnamenti %}
             <h3>{{tut}}</h3> 
             {% for studente in assegnamenti.tut %}
