--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -7,9 +7,8 @@
        
         {%for tutor in assegnamenti %}
             <h3>{{tutor}}</h3> 
-            {% for studente in assegnamenti.tutor %}
-               {{studente.cognome}} {{studenti.nome}} <br>
-            {%endfor%}
+              assegnamenti: {{assegnamenti.tutor}}
+           
         {%endfor%}
 
     </body>
