--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -4,7 +4,7 @@
             {{tut.0}} {{tut.1}} <br>
         {%endfor%}
         <h2>Assegnamenti</h2>
-       
+        {{assegnamenti}}
         {%for tutor in assegnamenti %}
             <h3>{{tutor}}</h3> 
               assegnamenti: {{assegnamenti.tutor}}
