--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -3,12 +3,13 @@
         {%for tut in tutor %}
             {{tut.0}} {{tut.1}} <br>
         {%endfor%}
-        <h2>Assegnamenti</h2>
+    
         {{assegnamenti}}
         {%for tutor,studenti in assegnamenti.items %}
             <h3>{{tutor}}</h3> 
-                {{studenti}}
-           
+            {%for studente in studenti %}
+                {{studente}} <br>
+            {%endfor%} 
         {%endfor%}
 
     </body>
