--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -1,16 +1,14 @@
 <html>
     <body>
-        {%for tut in tutor %}
-            {{tut.0}} {{tut.1}} <br>
-        {%endfor%}
     
-        {{assegnamenti}}
         {%for tutor,studenti in assegnamenti.items %}
             <h3>{{tutor}}</h3> 
             {%for studente in studenti %}
                 {{studente}} <br>
             {%endfor%} 
         {%endfor%}
+        <p>
+        Associa gli studenti ai rispettivi Tutor <button>Procedi</button> 
 
     </body>
 </html>
