debug I hope the last

--- a/tutor/templates/tutor/lista_tutor.html
+++ b/tutor/templates/tutor/lista_tutor.html
@@ -4,7 +4,7 @@
             function procedi() {
                 risp = confirm("Aggiorni i tutor degli studenti mostrati ?");
                 if (risp) {
-                   url = "completa_tutor=?vai=ok";
+                   url = "completa_tutor?vai=ok";
                    document.location = url;
                 }
             }
