inserito tuto in template  studenti

--- a/tutor/templates/tutor/studenti.html
+++ b/tutor/templates/tutor/studenti.html
@@ -15,12 +15,13 @@
     <div class="w3-container" style="width: 50%; margin:auto;">
         <h3>{{classe}}</h3>
             <table class="w3-table-all w3-card-4">
-                <th>Reg</th><th>Cognome</th><th>Nome</th><th>Guarda</th>
+                <th>Reg</th><th>Cognome</th><th>Nome</th><th>Tutor</th><th>Guarda</th>
                 {%for stud in studenti %}
                 <tr>
                     <td>  {{forloop.counter}}</td>
                     <td>  {{stud.cognome}}</td>
                     <td>  {{stud.nome}}</td>
+                    <td>  {{stud.tutor}}</td>
                     <td><img src="{%static 'tutor/gnome-help.png' %}"> </td>
                 </tr>
                 {%endfor%}
