--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -53,7 +53,7 @@
                 <button class="w3-button">Autenticazione</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="{%url 'admin:index'%}" class="w3-bar-item w3-button ">Admin</a>
-                    <a href="/pcto/tutor/mioLogin?next=/pcto/tutor" class="w3-bar-item w3-button ">Login</a>
+                    <a href="mioLogin?next=/pcto/tutor" class="w3-bar-item w3-button ">Login</a>
                     <a href="{%url 'tutor:logout_view'%}" class="w3-bar-item w3-button ">Logout</a> 
                 </div>
             </div>
