--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -15,12 +15,12 @@
 <script>
 
     function aggiungimi(id) {
-        url = "/tutor/aggiungimi/"+id;
+        url = "/pcto/tutor/aggiungimi/"+id;
         document.location = url;
     }
 
     function cancellami(id) {
-        url = "/tutor/cancellami/"+id
+        url = "/pcto/tutor/cancellami/"+id
         document.location = url;
     }
 
