--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -55,6 +55,8 @@
                     <a href="{%url 'admin:index'%}" class="w3-bar-item w3-button ">Admin</a>
                     <a href="mioLogin?next=/pcto/tutor" class="w3-bar-item w3-button ">Login</a>
                     <a href="{%url 'tutor:logout_view'%}" class="w3-bar-item w3-button ">Logout</a> 
+                    <a href="{%url 'tutor:change_password'%}" class="w3-bar-item w3-button ">Cambia Password</a> 
+
                 </div>
             </div>
 
