tolto archivi dal menu

--- a/tutor/templates/tutor/base.html
+++ b/tutor/templates/tutor/base.html
@@ -41,7 +41,7 @@
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="{%url 'tutor:proposte'%}" class="w3-bar-item w3-button ">Elenco Proposte</a>
                     <a href="{% url 'tutor:adesioni' %}" class="w3-bar-item w3-button ">Adesioni</a>
-                    <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a>
+                 <!--   <a href="{%url 'tutor:upload'%}" class="w3-bar-item w3-button ">Archivi</a> -->
                     
                 </div>
             </div>   
