--- a/tutor/templates/tutor/index.html
+++ b/tutor/templates/tutor/index.html
@@ -1,8 +1,28 @@
 {%extends 'tutor/base.html' %}
 
+{%block head %}
+
+<style>
+      .new {padding: 16px; font-size: 1.3em; width: 60%; text-align: justify; margin: auto;}
+      h2   {text-align:center;}
+</style>
+
+{%endblock %}
+
 {% block content %}
 
 <div class="w3-container">
       <h2>News </h2>
+      <div class="new">
+      Questa piattaforma è nata con lo scopo di facilitare le attività e le comunicazioni fra 
+      il docente orientatore e i tutor dell'orientamento. <br>
+      Il menu 'proposte' consente di visionare le iniziative didattiche interne o esterne, che il 
+      docente orientatore potrà raccogliere e catalogare. <p>
+      I tutor possono eventualmente mostrare interesse per una o più iniziative e 
+      segnalare i nomi di studenti interessati. <p>
+      Per interagire con la piattaforma utilizzare le credenziali che saranno fornite ad 
+      ogni utente autorizzato.
+      </div>
+
 </div>
 {%endblock%}
