--- a/tutor/templates/tutor/dettaglio_proposta.html
+++ b/tutor/templates/tutor/dettaglio_proposta.html
@@ -55,13 +55,13 @@
            <td> <span class=label>Nome progetto:</span> </td> <td>{{proposta.nome_progetto}}</td>
         </tr>
         <tr>
-           <td> <span class=label>Ente promotore: </span> </td>  <td> {{proposta.ente}} - url di riferimento:  <a href={{proposta.url}}>{{proposta.url|default:""}}</a> </td>
+           <td> <span class=label>Ente promotore: </span> </td>  <td> {{proposta.ente}}<br>url di riferimento:  <a href={{proposta.url}}>{{proposta.url|default:""}}</a> </td>
         </tr>
         <tr>
             <td><span class=label>Date:</span></td><td><b>Inizio:</b> {{proposta.data_inizio}} - <b>Fine:</b> {{proposta.data_fine}}</td>
         </tr>
         <tr>
-            <td><span class=label>Descrizione:</span></td><td>{{proposta.descrizione|linebreaks|default:""}}</td>
+            <td><span class=label>Descrizione:</span></td><td><br>{{proposta.descrizione|linebreaks|default:""}}</td>
         </tr>
     </table>  
     <hr>
