template index new

--- a/tutor/templates/tutor/index.html
+++ b/tutor/templates/tutor/index.html
@@ -12,17 +12,11 @@
 {% block content %}
 
 <div class="w3-container">
-      <h2>News </h2>
+      {%for new in news%}
+      <h2>new.titolo </h2>
       <div class="new">
-      Questa piattaforma è nata con lo scopo di facilitare le attività e le comunicazioni fra 
-      il docente orientatore e i tutor dell'orientamento. <br>
-      Il menu 'proposte' consente di visionare le iniziative didattiche interne o esterne, che il 
-      docente orientatore potrà raccogliere e catalogare. <p>
-      I tutor possono eventualmente mostrare interesse per una o più iniziative e 
-      segnalare i nomi di studenti interessati. <p>
-      Per interagire con la piattaforma utilizzare le credenziali che saranno fornite ad 
-      ogni utente autorizzato.
+      {{new.testo}}
       </div>
-
+      {%endfor%}
 </div>
 {%endblock%}
